Small tweaks based on PR feedback from Patrick and Justin; at this time, there's still debate about authentication, but all other discrepancies should have been addressed.
